syntax = "proto3";

package document;

option go_package = "documentpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.document";

import "google/api/annotations.proto";
import "precise-proofs/proofs/proto/proof.proto";
import "protoc-gen-swagger/options/annotations.proto";

// DocumentService contains all common interactions for document
service DocumentService {
  rpc CreateDocumentProof(CreateDocumentProofRequest) returns (DocumentProof) {
    option (google.api.http) = {
      post: "/document/{identifier}/proof"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates a list of precise proofs for the specified fields of the document given by ID"
    };
  }
  rpc CreateDocumentProofForVersion(CreateDocumentProofForVersionRequest) returns (DocumentProof) {
    option (google.api.http) = {
      post: "/document/{identifier}/{version}/proof"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates a list of precise proofs for the specified fields of the given version of the document given by ID"
    };
  }
}

message UpdateAccessTokenPayload {
  // The document which should contain the access token referenced below
  string delegating_document_identifier = 1;
  // The access token to be appended to the indicated document above
  AccessTokenParams access_token_params = 2;
}

message AccessTokenParams {
  // The identity being granted access to the document
  string grantee = 4;
  // Original identifier of the document
  string document_identifier = 2;
}

message CreateDocumentProofRequest {
  string identifier = 1;
  string type = 2;
  repeated string fields = 3;
}

// ResponseHeader contains a set of common fields for most document
message ResponseHeader {
  string document_id = 1;
  string version_id = 2;
  string state = 3;
}

message DocumentProof {
  ResponseHeader header = 1;
  repeated Proof field_proofs = 2;
}

message Proof {
  string property = 1;
  string value = 2;
  string salt = 3;
  // hash is filled if value & salt are not available
  string hash = 4;
  repeated string sorted_hashes = 5;
}

message CreateDocumentProofForVersionRequest {
  string identifier = 1;
  string type = 2;
  string version = 3;
  repeated string fields = 4;
}
